CMake config for Clang Address Sanitizer

--- a/planck-c/CMakeLists.txt
+++ b/planck-c/CMakeLists.txt
@@ -3,6 +3,9 @@ project(planck C)
 
 set(CMAKE_BUILD_TYPE Release)
 
+# Uncomment to enable Clang Address Sanitizer
+#set (CMAKE_C_FLAGS "-fsanitize=address -O1 -fno-omit-frame-pointer")
+
 set(SOURCE_FILES
     archive.c
     archive.h
