--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -29,8 +29,7 @@ elif [ -n "$CLJS_GIT_COMMIT" ]; then
      pushd clojurescript
      git reset --hard $CLJS_GIT_COMMIT
      # Apply patches
-     # curl -L http://dev.clojure.org/jira/secure/attachment/16303/CLJS-1861.patch | git apply
-     curl http://planck-repl.org/releases/1.18/0001-Experiment-turning-off-fn-var.patch | git apply
+     curl -L http://dev.clojure.org/jira/secure/attachment/16348/CLJS-1874.patch | git apply
      # Deal with the case when building in sandbox mode
      if [ -e ../profiles.clj ]; then
          export MAVEN_OPTS="-Dmaven.repo.local=../sandbox-m2"
