--- a/build-envs/ubuntu-14/Vagrantfile
+++ b/build-envs/ubuntu-14/Vagrantfile
@@ -1,7 +1,11 @@
 Vagrant.configure(2) do |config|
 
   config.vm.box = "ubuntu/trusty64"
-  
+
+  config.vm.provider "virtualbox" do |v|
+    v.memory = 1024
+  end  
+
   config.vm.provision "shell", inline: <<-SHELL
     sudo apt-get update
     sudo apt-get install -y git clang cmake pkg-config javascriptcoregtk-3.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev libicu-dev default-jdk maven
