--- a/build-envs/debian-8.7_64/Vagrantfile
+++ b/build-envs/debian-8.7_64/Vagrantfile
@@ -1,6 +1,10 @@
 Vagrant.configure(2) do |config|
 
   config.vm.box = "debian/jessie64"
+
+  config.vm.provider "virtualbox" do |v|
+    v.memory = 1024
+  end
   
   config.vm.provision "shell", inline: <<-SHELL
     sudo apt-get install -y git clang cmake pkg-config javascriptcoregtk-4.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev libicu-dev default-jdk maven curl
