Update with pilot patch and remove filter

--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -25,6 +25,7 @@ if [ -n "$CLJS_COMMIT" ]; then
      git reset --hard $CLJS_COMMIT
      # Apply patches
      curl -L http://dev.clojure.org/jira/secure/attachment/16577/CLJS-1997.patch | git apply
+     curl -L https://dev.clojure.org/jira/secure/attachment/16913/CLJS-2122.patch | git apply
      # Deal with the case when building in sandbox mode
      if [ -e ../profiles.clj ]; then
          export MAVEN_OPTS="-Dmaven.repo.local=../sandbox-m2"
