Apply simple Closure optimizations to files

--- a/script/build
+++ b/script/build
@@ -12,6 +12,9 @@ checkCmdSuccess() {
     fi
 }
 
+export CLOSURE_RELEASE="20170626"
+script/get-closure-compiler
+
 NON_BUNDLED_SRC=`find planck-cljs -type f -newer planck-c/bundle.c`
 BUNDLE_SIZE=$(wc -c < planck-c/bundle.c)
 if [ -n "$NON_BUNDLED_SRC" ] || [ ! -d planck-c/build ] || [ $BUNDLE_SIZE -le 400 ]; then
