--- a/build-envs/centos-7_64/Vagrantfile
+++ b/build-envs/centos-7_64/Vagrantfile
@@ -3,7 +3,7 @@ Vagrant.configure(2) do |config|
   config.vm.box = "centos/7"
   
   config.vm.provision "shell", inline: <<-SHELL
-    sudo yum -y install git gcc cmake java maven webkitgtk3-devel libzip-devel libcurl-devel vim
+    sudo yum -y install git gcc cmake java maven webkitgtk3-devel libzip-devel libcurl-devel vim unzip
     mkdir bin
     curl -L https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > bin/lein
     chmod +x bin/lein
