--- a/build-envs/debian-9.0_64/Vagrantfile
+++ b/build-envs/debian-9.0_64/Vagrantfile
@@ -7,7 +7,7 @@ Vagrant.configure(2) do |config|
   end
   
   config.vm.provision "shell", inline: <<-SHELL
-    sudo apt-get install -y git clang cmake pkg-config javascriptcoregtk-4.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev libicu-dev default-jdk maven curl
+    sudo apt-get install -y git clang cmake pkg-config javascriptcoregtk-4.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev libicu-dev default-jdk maven curl unzip
     mkdir bin
     curl -L https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > bin/lein
     chmod +x bin/lein
