Work around JSC3 issue

--- a/planck-c/CMakeLists.txt
+++ b/planck-c/CMakeLists.txt
@@ -97,6 +97,7 @@ elseif(UNIX)
     pkg_check_modules(JAVASCRIPTCORE javascriptcoregtk-4.0)
     if(NOT JAVASCRIPTCORE_FOUND)
         pkg_check_modules(JAVASCRIPTCORE REQUIRED javascriptcoregtk-3.0)
+        add_definitions(-DJAVASCRIPT_CORE_3)
     endif(NOT JAVASCRIPTCORE_FOUND)
     include_directories(${JAVASCRIPTCORE_INCLUDE_DIRS})
     target_link_libraries(planck ${JAVASCRIPTCORE_LDFLAGS})
