--- a/build-envs/nixos-16.09_64/Vagrantfile
+++ b/build-envs/nixos-16.09_64/Vagrantfile
@@ -3,7 +3,7 @@ Vagrant.configure(2) do |config|
   config.vm.box = "nixos/nixos-16.09-x86_64"
   
   config.vm.provision "shell", inline: <<-SHELL
-    nix-env -iA nixos.git nixos.clang nixos.gnumake nixos.cmake nixos.pkgconfig nixos.vim nixos.jdk nixos.maven nixos.webkitgtk nixos.glib nixos.pcre nixos.libzip nixos.icu nixos.curl nixos.zlib
+    nix-env -iA nixos.git nixos.clang nixos.gnumake nixos.cmake nixos.pkgconfig nixos.vim nixos.jdk nixos.maven nixos.webkitgtk nixos.glib nixos.pcre nixos.libzip nixos.icu nixos.curl nixos.zlib nixos.unzip
     mkdir bin
     curl -L https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > bin/lein
     chmod +x bin/lein
