--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ planck-cljs/clojurescript
 build-envs/*/*-cloudimg-console.log
 /compiler
 /planck-cljs/jscomp.js
+/planck-cljs/bundle.c
+/planck-cljs/bundle_dict.c
