--- a/script/build
+++ b/script/build
@@ -12,7 +12,8 @@ checkCmdSuccess() {
     fi
 }
 
-export CLOSURE_RELEASE="20170806"
+export CLOSURE_RELEASE="20170910"
+export CLOSURE_JS_RELEASE=${CLOSURE_RELEASE}.0.1
 script/get-closure-compiler
 
 NON_BUNDLED_SRC=`find planck-cljs -type f -newer planck-c/bundle.c`
