Add support for core.specs.alpha
Fixes #592

--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -49,4 +49,5 @@ fi
 CLJSC_CP=`script/lein with-profile build-release classpath`
 
 mkdir -p out/cljs/analyzer
+mkdir -p out/cljs/core/specs
 java -cp $CLJSC_CP clojure.main script/build.clj
