--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,9 @@ before_install:
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then jdk_switcher use openjdk8; fi
+install:
+  - curl -O https://download.clojure.org/install/linux-install-1.9.0.315.sh
+  - chmod +x linux-install-1.9.0.315.sh
+  - sudo ./linux-install-1.9.0.315.sh
 
 script: script/build && script/test
