Support for CANARY

--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -12,4 +12,7 @@ mkdir -p out/cljs/analyzer
 mkdir -p out/cljs/core/specs
 
 export PATH=script:$PATH
+if [ -v CANARY_CLOJURESCRIPT_VERSION ]
+  DEPS="{:deps {org.clojure/clojurescript {:mvn/version \"$CANARY_CLOJURESCRIPT_VERSION\"}}}"
+fi
 clojure -Sdeps "${DEPS:-{}}" script/build.clj
