--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,9 @@ before_install:
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then jdk_switcher use openjdk8; fi
-  - curl -O https://download.clojure.org/install/linux-install-1.9.0.315.sh
-  - chmod +x linux-install-1.9.0.315.sh
-  - sudo ./linux-install-1.9.0.315.sh
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install clojure; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl -O https://download.clojure.org/install/linux-install-1.9.0.315.sh; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then chmod +x linux-install-1.9.0.315.sh; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ./linux-install-1.9.0.315.sh; fi
 
 script: script/build && script/test
