--- a/build-envs/centos-7_64/Vagrantfile
+++ b/build-envs/centos-7_64/Vagrantfile
@@ -4,9 +4,9 @@ Vagrant.configure(2) do |config|
   
   config.vm.provision "shell", inline: <<-SHELL
     sudo yum -y install git gcc cmake java maven webkitgtk3-devel libzip-devel libcurl-devel vim unzip
-    mkdir bin
-    curl -L https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > bin/lein
-    chmod +x bin/lein
-  SHELL
+    curl -O https://download.clojure.org/install/linux-install-1.9.0.315.sh
+    chmod +x linux-install-1.9.0.315.sh
+    sudo ./linux-install-1.9.0.315.sh
+SHELL
 
 end
